Ajout du sokoban dans le readme